--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="styles/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <canvas id="canvas" class="game-canvas" width="900" height="900"></canvas>
 
-    <script src="controller.js"></script>
-    <script src="InputManager.js"></script>
+    <script src="scripts/controller.js"></script>
+    <script src="scripts/InputManager.js"></script>
 </body>
 </html>
