resize canvas after tilesize

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="styles/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <canvas id="canvas" class="game-canvas" width="900" height="900"></canvas>
+    <canvas id="canvas" class="game-canvas"></canvas>
 
     <script src="scripts/controller.js"></script>
     <script src="scripts/InputManager.js"></script>
