--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <canvas id="canvas" class="game-canvas"></canvas>
 
+    <script src="scripts/gameObject.js"></script>
+    <script src="scripts/player.js"></script>
+    <script src="scripts/wand.js"></script>
+    <script src="scripts/zombie.js"></script>
+    <script src="scripts/barrel.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/InputManager.js"></script>
 </body>
