--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="scripts/gameObject.js"></script>
     <script src="scripts/player.js"></script>
-    <script src="scripts/wand.js"></script>
+    <script src="scripts/wall.js"></script>
     <script src="scripts/zombie.js"></script>
     <script src="scripts/barrel.js"></script>
     <script src="scripts/controller.js"></script>
