--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="scripts/wall.js"></script>
     <script src="scripts/zombie.js"></script>
     <script src="scripts/barrel.js"></script>
+    <script src="scripts/bullet.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/InputManager.js"></script>
 </body>
