--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <script src="scripts/barrel.js"></script>
         <script src="scripts/bullet.js"></script>
         <script src="scripts/controller.js"></script>
-        <script src="scripts/InputManager.js"></script>
+        <script src="scripts/inputManager.js"></script>
     </body>
 </html>
