--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <canvas id="canvas" class="game-canvas"></canvas>
 
         <script src="scripts/gameObject.js"></script>
+        <script src="scripts/collideZone.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/world.js"></script>
         <script src="scripts/wall.js"></script>
