--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <script src="scripts/gameObject.js"></script>
         <script src="scripts/rectangularCollideZone.js"></script>
+        <script src="scripts/circularCollideZone.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/world.js"></script>
         <script src="scripts/wall.js"></script>
