--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <canvas id="canvas" class="game-canvas"></canvas>
 
+        <script src="scripts/assetLoader.js"></script>
         <script src="scripts/gameObject.js"></script>
         <script src="scripts/rectangularCollideZone.js"></script>
         <script src="scripts/circularCollideZone.js"></script>
