--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="scripts/zombie.js"></script>
         <script src="scripts/barrel.js"></script>
         <script src="scripts/bullet.js"></script>
-        <script src="scripts/utils.js"></script>
+        <script src="scripts/collisionDetection.js"></script>
         <script src="scripts/controller.js"></script>
         <script src="scripts/inputManager.js"></script>
     </body>
