implement utils.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <canvas id="canvas" class="game-canvas"></canvas>
 
         <script src="scripts/assetLoader.js"></script>
+        <script src="scripts/utils.js"></script>
         <script src="scripts/gameObject.js"></script>
         <script src="scripts/rectangularCollideZone.js"></script>
         <script src="scripts/circularCollideZone.js"></script>
