--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <script src="scripts/utils.js"></script>
         <script src="scripts/controller.js"></script>
         <script src="scripts/inputManager.js"></script>
+        <script src="scripts/pathFinding.js"></script>
     </body>
 </html>
