--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="scripts/player.js"></script>
         <script src="scripts/world.js"></script>
         <script src="scripts/wall.js"></script>
+        <script src="scripts/explosion.js"></script>
         <script src="scripts/zombie.js"></script>
         <script src="scripts/barrel.js"></script>
         <script src="scripts/bullet.js"></script>
