--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WTA Shooter</title>
+    <title>Undead Revenge</title>
     <link href="styles/style.css" type="text/css" rel="stylesheet">
 </head>
     <body>
