--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="scripts/wall.js"></script>
         <script src="scripts/explosion.js"></script>
         <script src="scripts/zombie.js"></script>
+        <script src="scripts/starkerZombie.js"></script>
         <script src="scripts/barrel.js"></script>
         <script src="scripts/bullet.js"></script>
         <script src="scripts/collisionDetection.js"></script>
