--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="scripts/assetLoader.js"></script>
         <script src="scripts/utils.js"></script>
         <script src="scripts/gameObject.js"></script>
+        <script src="scripts/rectangularZone.js"></script>
         <script src="scripts/rectangularCollideZone.js"></script>
         <script src="scripts/circularCollideZone.js"></script>
         <script src="scripts/player.js"></script>
