--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <script src="scripts/utils.js"></script>
         <script src="scripts/gameObject.js"></script>
         <script src="scripts/rectangularZone.js"></script>
+        <script src="scripts/rectangularHitZone.js"></script>
         <script src="scripts/rectangularCollideZone.js"></script>
+        <script src="scripts/circularZone.js"></script>
         <script src="scripts/circularCollideZone.js"></script>
+        <script src="scripts/circularHitZone.js"></script>
+
         <script src="scripts/player.js"></script>
         <script src="scripts/world.js"></script>
         <script src="scripts/wall.js"></script>
