--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
         <script src="scripts/collisionDetection.js"></script>
         <script src="scripts/controller.js"></script>
         <script src="scripts/inputManager.js"></script>
+
+        <button onclick="toggleDebugMode()">debug mode</button>
     </body>
 </html>
