--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <script src="scripts/zones/circularZone.js"></script>
         <script src="scripts/zones/circularCollideZone.js"></script>
         <script src="scripts/zones/circularHitZone.js"></script>
-
         <script src="scripts/player.js"></script>
         <script src="scripts/world.js"></script>
         <script src="scripts/wall.js"></script>
@@ -29,6 +28,7 @@
         <script src="scripts/collisionDetection.js"></script>
         <script src="scripts/controller.js"></script>
         <script src="scripts/inputManager.js"></script>
+        <script src="scripts/medikit.js"></script>
 
         <button onclick="toggleDebugMode()">debug mode</button>
     </body>
