--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script src="scripts/controller.js"></script>
         <script src="scripts/inputManager.js"></script>
         <script src="scripts/medikit.js"></script>
+        <script src="scripts/ammunition.js"></script>
 
         <button onclick="toggleDebugMode()">debug mode</button>
     </body>
